Fix JPA persistence configuration and package paths
- Fix all entity package paths in persistence.xml:
  * Update org.apache.airavata.registry.core.entities.* to org.apache.airavata.registry.entities.*
  * Update org.apache.airavata.profile.commons.* to org.apache.airavata.profile.entities.*
  * Fix 114 entity class references across 7 persistence units

- Fix Spring Boot configuration:
  * Update @ComponentScan in AiravataApplication to use correct repository package paths
  * Update @EntityScan to scan correct entity package paths
  * Add credential entities and repositories to component scanning

- Fix JPA repository configuration in JpaConfig:
  * Update all @EnableJpaRepositories basePackages from registry.core.repositories to registry.repositories
  * Ensure all 7 persistence units have correct repository configurations

- Add validation tests:
  * SpringContextLoadTest - validates Spring context loading and DI
  * EntityLoadingTest - validates entity loading in all persistence units
  * PersistenceConfigurationTest - validates persistence configuration
  * ValidatePersistenceXml - standalone utility to validate persistence.xml

- Mark legacy workflow catalog entities as @Deprecated:
  * WorkflowEntity, WorkflowInputEntity, WorkflowOutputEntity
  * NodeEntity, EdgeEntity, PortEntity
  * ComponentStatusEntity, WorkflowStatusEntity

All persistence units validated successfully. No compile or persistence errors.